[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.3", features = ["arbitrary", "quickcheck", "serde"] }
num-rational = "0.4.1"
num-traits = "0.2.16"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde = "1.0.183"
serde_json = "1.0.104"
